--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/cursoAlumno.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/cursoAlumno.xhtml
@@ -39,6 +39,8 @@
 
             </p:dataTable>
 
+            <p:tooltip for="consulta" value="Seleccione los alumnos a inscribir en el curso"/>
+            
             <div class="EmptyBox20"></div>
             <div class="Container100">
                 <p:commandButton  value="Inscribir" action="#{gestionCursoController.alumnosSeleccion()}" update="consulta"  />
