--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
@@ -39,6 +39,10 @@
                     
                 </p:panelGrid>
                 
+                <p:tooltip for="docente" value="Seleccione el docente al cual desea hacerle una consulta"/>
+                <p:tooltip for="tema" value="Ingrese el tema de la consulta"/>
+                <p:tooltip for="consulta" value="Descripcion detallada de la consutla"/>
+                
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
                     <p:commandButton value="Guardar" action="#{gestionarConsultasController.guardar()}" update="p1" />
