--- a/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/crear.xhtml
@@ -65,6 +65,11 @@
                         <f:selectItem itemValue="3" itemLabel="ALTA" />
                     </p:selectOneMenu>
                 </p:panelGrid>
+                <p:tooltip for="titulo" value="Ingrese el titulo de la noticia"/>
+                <p:tooltip for="mensaje" value="Ingrese el detalle de la noticia"/>
+                <p:tooltip for="tipo" value="Ingrese el tipo de noticia, por ejemplo noticia de caracter academico"/>
+                <p:tooltip for="curso" value="Seleccione el curso al cual se enviara la noticia"/>
+                <p:tooltip for="prioridad" value="Seleccione la prioridad de la noticia, por ejemplo prioridad alta"/>
                 
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
