--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/crear.xhtml
@@ -46,6 +46,13 @@
                         <f:selectItems itemValue ="#{materia.idMateria}" itemLabel="#{materia.maNombre}" value="#{gestionCursoController.materiaList}" var="materia" />
                     </p:selectOneMenu>
                 </p:panelGrid>
+                <p:tooltip for="nombre" value="Ingrese un nombre para el curso."/>
+                <p:tooltip for="capacidad" value="Defina la capacidad que tendra el curso"/>
+                <p:tooltip for="docente" value="Seleccione el docente que impartira el curso"/>
+                <p:tooltip for="grado" value="Seleccione el grado con el que se asociara el curso"/>
+                <p:tooltip for="seccion" value="seleccione la seccion del grado"/>
+                <p:tooltip for="materia" value="seleccione la materia para la cual se creara el curso"/>
+                
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
                     <p:commandButton tabindex="7" value="Guardar" action="#{gestionCursoController.guardar()}" update="p1" />
