--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/crear.xhtml
@@ -26,21 +26,21 @@
                 <p:focus id="focus" context="p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel  value="Título: " class="Contanier10 Responsive"></p:outputLabel>
-                    <p:inputText value="#{gestionarEvaluacionController.evaluacionNuevo.evNombre}" ></p:inputText>
+                    <p:inputText id="titulo" value="#{gestionarEvaluacionController.evaluacionNuevo.evNombre}" ></p:inputText>
                     <p:outputLabel for="Curso" value="Curso: " class=" Responsive" ></p:outputLabel>
                     <p:selectOneMenu id="Curso" filter="true" filterMatchMode="contains" value="#{gestionarEvaluacionController.idCurso}" >
                         <f:selectItems itemValue="#{curso.idCurso}" itemLabel="#{curso.crNombre}" value="#{gestionarEvaluacionController.cursoList}" var="curso"></f:selectItems>
                     </p:selectOneMenu>
                     <p:outputLabel  value="Ponderacion de la evaluación (%): " class="Contanier10 Responsive"></p:outputLabel>
-                    <p:spinner min="0" max="100" value="#{gestionarEvaluacionController.evaluacionNuevo.evPonderacion}"></p:spinner>
+                    <p:spinner id="ponderacion" min="0" max="100" value="#{gestionarEvaluacionController.evaluacionNuevo.evPonderacion}"></p:spinner>
                     <p:outputLabel  value="Fecha de Inicio: " class="Contanier10 Responsive"></p:outputLabel>                        
-                    <p:calendar class="Container100" id="fechInicio" value="#{gestionarEvaluacionController.evaluacionNuevo.evFechaInicio}" mindate="#{dateUtils.fechaMinima}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:calendar  class="Container100" id="fechInicio" value="#{gestionarEvaluacionController.evaluacionNuevo.evFechaInicio}" mindate="#{dateUtils.fechaMinima}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel  value="Fecha de Cierre: " class="Contanier10 Responsive"></p:outputLabel>
-                    <p:calendar class="Container100" id="fechaCierre" value="#{gestionarEvaluacionController.evaluacionNuevo.evFechaCierre}" mindate="#{dateUtils.fechaMinima}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de Cierre" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:calendar  class="Container100" id="fechaCierre" value="#{gestionarEvaluacionController.evaluacionNuevo.evFechaCierre}" mindate="#{dateUtils.fechaMinima}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de Cierre" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel  value="Duración en minutos: " class="Contanier10 Responsive"></p:outputLabel>
-                    <p:spinner value="#{gestionarEvaluacionController.evaluacionNuevo.evDuracion}"></p:spinner>
+                    <p:spinner id="duracion" value="#{gestionarEvaluacionController.evaluacionNuevo.evDuracion}"></p:spinner>
                     <p:outputLabel  value="Intentos permitidos: " class="Contanier10 Responsive"></p:outputLabel>
-                    <p:spinner  value="#{gestionarEvaluacionController.evaluacionNuevo.evIntentos}"></p:spinner>
+                    <p:spinner  id="intentos" value="#{gestionarEvaluacionController.evaluacionNuevo.evIntentos}"></p:spinner>
                     <p:outputLabel  value="Ver Nota al finalizar evaluación: " class="Contanier10 Responsive"></p:outputLabel>
                     <p:selectOneRadio  id="console" value="#{gestionarEvaluacionController.evaluacionNuevo.evNotaFin}">
                         <f:selectItem itemValue="Si" itemLabel="Si" />
@@ -66,6 +66,15 @@
                     <p:outputLabel  value="Preguntas por página: " class="Contanier10 Responsive"></p:outputLabel>
                     <p:spinner  value="#{gestionarEvaluacionController.evaluacionNuevo.evPreguntasPagina}"></p:spinner>
                 </p:panelGrid>
+                
+                <p:tooltip for="titulo" value="Ingrese el titulo de la evaluacion"/>
+                <p:tooltip for="Curso" value="Seleccione el curso en la cual se creara la evaluacion"/>
+                <p:tooltip for="ponderacion" value="Defina la ponderacion de la evaluacion en puntos porcentuales, ejemplo 25%"/>
+                <p:tooltip for="fechInicio" value="seleccione la fecha de inicio para la evaluacion"/>
+                <p:tooltip for="fechaCierre" value="seleccione la fecha de finalizacion para la evaluacion"/>
+                <p:tooltip for="intentos" value="Numero de intentos permitidos en la evaluacion"/>
+                <p:tooltip for="pa" value="Define si las preguntas se presentaran en orden aleatorio"/>
+                <p:tooltip for="rf" value="Define si el alumno podra ver las respuestas tras finalizar la evaluacion"/>
 
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
