--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionMaterias/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionMaterias/editar.xhtml
@@ -45,6 +45,9 @@
                         <f:selectItem itemValue ="VESPERTINO" itemLabel="VESPERTINO"/>
                     </p:selectOneMenu>   
                 </p:panelGrid>
+                
+                <p:tooltip for="nombre" value="Seleccione el nombre de la materia a ingresar"/>                                    
+                <p:tooltip for="estado" value="Seleccione el estado de la materia, por ejempo materia disponible"/>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionMateriasController.guardarModifica()}"/>
