--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/editar.xhtml
@@ -43,6 +43,11 @@
                     <p:outputLabel for="mod_tipoIngreso" value="Tipo de ingreso: " class=" Responsive"></p:outputLabel>
                     <p:outputLabel id="mod_tipoIngreso" value="#{gestionNotaController.notaModifica.tipoIngreso}" class=" Responsive"></p:outputLabel>
                 </p:panelGrid>
+                 <p:tooltip for="mod_alumno" value="Seleccione el alumno al cual se le registrara una nota"/>
+                <p:tooltip for="mod_materia" value="Seleccione la materia a la cual pertenece la nota"/>
+                <p:tooltip for="mod_evaluacion" value="Seleccione la evaluacion a la cual pertenece la nota"/>
+                <p:tooltip for="mod_nota" value="Ingrese la nota, debe estar en 0.0 y 10.0"/>
+                
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton tabindex="6" value="Guardar" action="#{gestionNotaController.guardarModifica()}" update="mod_p1,focus" oncomplete="configurarEnterTab()" />
