--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/crear.xhtml
@@ -42,6 +42,11 @@
                         <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{gestionMatriculaController.seccionesList}" var="seccion"></f:selectItems>
                     </p:selectOneMenu>
                 </p:panelGrid>
+                
+                 <p:tooltip for="nombre" value="Seleccione el alumno a matricular"/>
+                <p:tooltip for="grado" value="Seleccione el grado en el cual matricular al alumno"/>
+                <p:tooltip for="seccion" value="Seleccione la seccion del grado"/>
+             
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionMatriculaController.guardar()}" update="p1" />
