--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
@@ -38,6 +38,10 @@
                         <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{gestionMatriculaController.seccionesModificaList}" var="seccion"></f:selectItems>
                     </p:selectOneMenu>
                 </p:panelGrid>
+                
+                <p:tooltip for="mod_nombre" value="Seleccione el alumno a matricular"/>
+                <p:tooltip for="mod_grado" value="Seleccione el grado en el cual matricular al alumno"/>
+                <p:tooltip for="mod_seccion" value="Seleccione la seccion del grado"/>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar" action="#{gestionMatriculaController.guardarModifica()}" update="mod_p1" />
