--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
@@ -38,7 +38,9 @@
                     <p:editor class="Container100" id="consulta" value="#{gestionarConsultasController.consultaModifica.tdConsulta}" maxlength="4000"  required="true" requiredMessage="Debe ingresar la consulta" ></p:editor>
                     
                 </p:panelGrid>
-                
+                <p:tooltip for="docente" value="Seleccione el docente al cual desea hacerle una consulta"/>
+                <p:tooltip for="tema" value="Ingrese el tema de la consulta"/>
+                <p:tooltip for="consulta" value="Descripcion detallada de la consutla"/>
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
                     <p:commandButton tabindex="12" value="Guardar" action="#{gestionarConsultasController.guardarModifica()}" update="p1,focus" />
