correccion de bugs

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/ejerciciosResueltos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/ejerciciosResueltos/index.xhtml
@@ -32,7 +32,7 @@
             <p:tab title="Diseño de Ejercicio">
                 <h:form>
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda" width="400" maximizable="true">
-                        <ui:include src="ayuda/ver.xhtml"></ui:include>
+                        <ui:include src="ayuda/index.xhtml"></ui:include>
                     </p:dialog>
                     <p:menubar>
                         <p:submenu label="Funciones" >   
