--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/editarRespuesta.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/editarRespuesta.xhtml
@@ -10,7 +10,7 @@
            <p:menuitem value="Home" url="/"/>
            <p:menuitem value="Gestionar Año Escolar" url="#"/>
             <p:menuitem value="Gestionar Respuestas" url="#{siteUrls.gestionEvaluacion}"/>
-            <p:menuitem value="Modificar Respustas"></p:menuitem>
+            <p:menuitem value="Modificar Respuestas"></p:menuitem>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
