--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/indexRespuesta.xhtml
@@ -46,7 +46,7 @@
                     <p:column headerText="Pregunta" style="width: 55%">
                         #{car.erRespuesta}
                     </p:column>                                                          
-                    <p:column headerText="Coreecta" style="width: 10%">
+                    <p:column headerText="Correcta" style="width: 10%">
                         #{car.erRespCorrecta}
                     </p:column>
                     <p:column headerText="Acciones" style="width: 12%">
