--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionMaterias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionMaterias/index.xhtml
@@ -70,7 +70,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Adicionar Materia" action="#{gestionMateriasController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Adicionar Materia" action="#{gestionMateriasController.initNuevo()}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionMateriasController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
