--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
@@ -17,61 +17,62 @@
         </p:dialog>
     </ui:define>
     <ui:define name="content">
-        <p:tabView>
-            <p:tab title="Reporte Estadistico de Avance por Alumno">
-                <h:form>
-                    <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="4">
-                        <p:outputLabel for="grado" value="Grado: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="grado" class=" Responsive" value="#{rptEstadisticoAvanceController.idgrado}" >
-                            <f:selectItems itemValue ="#{gr.idGrado}" itemLabel="#{gr.grNombre}" value="#{rptEstadisticoAvanceController.listGrados}" var="gr" />
-                        </p:selectOneMenu>
-                        <p:outputLabel for="seccion" value="Seccion: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="seccion" class=" Responsive" value="#{rptEstadisticoAvanceController.idseccion}" >
-                            <f:selectItems itemValue ="#{sc.idSeccion}" itemLabel="#{sc.scDescripcion}" value="#{rptEstadisticoAvanceController.listSecciones}" var="sc" />
-                        </p:selectOneMenu>
-                        <p:outputLabel for="materia" value="Materia: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="materia" class=" Responsive" value="#{rptEstadisticoAvanceController.idmateria}" >
-                            <f:selectItems itemValue ="#{mt.idMateria}" itemLabel="#{mt.maNombre}" value="#{rptEstadisticoAvanceController.listMaterias}" var="mt" />
-                        </p:selectOneMenu>
-                        <p:outputLabel for="alumno" value="Alumno: " class="  Responsive"></p:outputLabel>
-                        <p:selectOneMenu id="alumno" class=" Responsive" value="#{rptEstadisticoAvanceController.idalumno}" >
-                            <f:selectItems itemValue ="#{al.idAlumno}" itemLabel="#{al.alCarnet}" value="#{rptEstadisticoAvanceController.listAlumnos}" var="al" />
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-                    
-                    
-                    <div class="EmptyBox20"></div>
-                    <p:dataTable id="consulta" rows="10" var="avance" value="#{rptEstadisticoAvanceController.listDatos}" 
-                                 paginator="false"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
-                                 reflow="true">
-                        <p:column headerText="Materia" >
-                            #{avance.materia}
-                        </p:column>
-                        <p:column headerText="Clase" >
-                            #{avance.clase}
-                        </p:column>
-                        <p:column headerText="Tipo de Clase" >
-                            #{avance.tipo}
-                        </p:column>
-                        <p:column headerText="Total Puntos" >
-                            #{avance.total}
-                        </p:column>
-                        <p:column headerText="Acumulados" >
-                            #{avance.acumulado}
-                        </p:column>
-                        <p:column headerText="% Avance" >
-                            #{avance.porcentaje} %
-                        </p:column>
-                        <f:facet name="footer">
-                            Total de alumnos #{rptEstadisticoAvanceController.totalAlumnos}
-                        </f:facet>
-                    </p:dataTable>
-                    
-                    <div class="EmptyBox20"></div>
-                    <div class="TexAlCenter">
+        <div class="EmptyBox5"></div>
+        <h:form>
+            <p:panel>
+                <div class="EmptyBox20"></div>
+                <p:panelGrid columns="4">
+                    <p:outputLabel for="grado" value="Grado: " class="  Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="grado" class=" Responsive" value="#{rptEstadisticoAvanceController.idgrado}" >
+                        <f:selectItems itemValue ="#{gr.idGrado}" itemLabel="#{gr.grNombre}" value="#{rptEstadisticoAvanceController.listGrados}" var="gr" />
+                    </p:selectOneMenu>
+                    <p:outputLabel for="seccion" value="Seccion: " class="  Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="seccion" class=" Responsive" value="#{rptEstadisticoAvanceController.idseccion}" >
+                        <f:selectItems itemValue ="#{sc.idSeccion}" itemLabel="#{sc.scDescripcion}" value="#{rptEstadisticoAvanceController.listSecciones}" var="sc" />
+                    </p:selectOneMenu>
+                    <p:outputLabel for="materia" value="Materia: " class="  Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="materia" class=" Responsive" value="#{rptEstadisticoAvanceController.idmateria}" >
+                        <f:selectItems itemValue ="#{mt.idMateria}" itemLabel="#{mt.maNombre}" value="#{rptEstadisticoAvanceController.listMaterias}" var="mt" />
+                    </p:selectOneMenu>
+                    <p:outputLabel for="alumno" value="Alumno: " class="  Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="alumno" class=" Responsive" value="#{rptEstadisticoAvanceController.idalumno}" >
+                        <f:selectItems itemValue ="#{al.idAlumno}" itemLabel="#{al.alCarnet}" value="#{rptEstadisticoAvanceController.listAlumnos}" var="al" />
+                    </p:selectOneMenu>
+                    <p:commandButton value="Refrescar" actionListener="#{rptEstadisticoAvanceController.refresh()}" update="consulta" ajax="true"></p:commandButton>
+                </p:panelGrid>
+
+
+                <div class="EmptyBox20"></div>
+                <p:dataTable id="consulta" rows="10" var="avance" value="#{rptEstadisticoAvanceController.listDatos}" 
+                             paginator="false"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             rowsPerPageTemplate="10,20,40"
+                             reflow="true">
+                    <p:column headerText="Materia" >
+                        #{avance.materia}
+                    </p:column>
+                    <p:column headerText="Clase" >
+                        #{avance.clase}
+                    </p:column>
+                    <p:column headerText="Tipo de Clase" >
+                        #{avance.tipo}
+                    </p:column>
+                    <p:column headerText="Total Puntos" >
+                        #{avance.total}
+                    </p:column>
+                    <p:column headerText="Acumulados" >
+                        #{avance.acumulado}
+                    </p:column>
+                    <p:column headerText="% Avance" >
+                        #{avance.porcentaje} %
+                    </p:column>
+                    <f:facet name="footer">
+                        Total de alumnos #{rptEstadisticoAvanceController.totalAlumnos}
+                    </f:facet>
+                </p:dataTable>
+
+                <div class="EmptyBox20"></div>
+                <div class="TexAlCenter">
                     <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
                         <p:outputLabel value="Exportar a:"></p:outputLabel>
                         <p:selectOneRadio  id="console" value="#{rptEstadisticoAvanceController.tipoRpt}">
@@ -81,9 +82,8 @@
                         <p:commandButton  value="Generar" ajax="false" actionListener="#{rptEstadisticoAvanceController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptEstadisticoAvanceController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
-                    </div>
-                </h:form>
-            </p:tab>
-        </p:tabView>
+                </div>
+            </p:panel>
+        </h:form>
     </ui:define>
 </ui:composition>
