--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteClases/index.xhtml
@@ -46,10 +46,8 @@
                         
                     </p:panelGrid>
                     <div class="EmptyBox20"></div>
-                    <p:dataTable id="consulta" rows="10" var="clase" value="#{rptClasesController.listDatos}" 
-                                 paginator="false" emptyMessage="No hay clases que mostrar"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
+                    <p:dataTable id="consulta" var="clase" value="#{rptClasesController.listDatos}" 
+                                 paginator="false" emptyMessage="No hay clases que mostrar"                                 
                                  reflow="true">
 
                         <p:column headerText="Curso" >
