--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
@@ -21,9 +21,9 @@
         <h:form>            
             <p:panel>
                 <p:panelGrid columns="5">
-                     <p:outputLabel for="desde" value="F. Desde: " class=" Responsive"></p:outputLabel>
+                     <p:outputLabel for="desde" value="Fecha Desde: " class=" Responsive"></p:outputLabel>
                      <p:calendar class="Container100" id="desde" value="#{rptDocentesController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
-                     <p:outputLabel for="hasta" value="F. Hasta: " class=" Responsive"></p:outputLabel>
+                     <p:outputLabel for="hasta" value="hasta: " class=" Responsive"></p:outputLabel>
                      <p:calendar class="Container100" id="hasta" value="#{rptDocentesController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                      <p:commandButton value="generar" actionListener="#{rptDocentesController.fill()}" update="consulta" ajax="true"></p:commandButton>
                 </p:panelGrid>
