--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteEstadisticoAvanceAlumnos/index.xhtml
@@ -43,10 +43,8 @@
 
 
                 <div class="EmptyBox20"></div>
-                <p:dataTable id="consulta" rows="10" var="avance" value="#{rptEstadisticoAvanceController.listDatos}" 
+                <p:dataTable id="consulta" var="avance" value="#{rptEstadisticoAvanceController.listDatos}" 
                              paginator="false"
-                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                             rowsPerPageTemplate="10,20,40"
                              reflow="true">
                     <p:column headerText="Materia" >
                         #{avance.materia}
