--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/editar.xhtml
@@ -10,8 +10,8 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Administración de Sistema" url="#"/>
             <p:menuitem value="Gestión de catalogos" url="#"/>
-            <p:menuitem value="Grado" url="#{siteUrls.catGrado}"/>
-            <p:menuitem value="Modificar Grado" url="#"/>
+            <p:menuitem value="Secciones" url="#{siteUrls.catSeccion}"/>
+            <p:menuitem value="Modificar Seccion" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
@@ -24,38 +24,28 @@
                     <ui:include src="ayuda/crear.xhtml"></ui:include>
                 </p:dialog>
                 <p:focus id="focus" context="p1"/>
-                <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
-                    <p:outputLabel for="nombre"  value="Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:inputText tabindex="1" id="nombre" value="#{catGradoController.modifica.grNombre}" required="true" requiredMessage="Debe ingresar un nombre al archivo" maxlength="#{tamanioUtils.nombreArchivoMax}"></p:inputText>
-                    <p:outputLabel for="numero"  value="Número " class=" Responsive"></p:outputLabel>
-                    <p:spinner tabindex="1" id="numero" value="#{catGradoController.modifica.grNumero}" required="true" requiredMessage="Debe ingresar un numero de grado" max="99" min="1"></p:spinner>
-                    <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu tabindex="2" id="estado" class=" Responsive" value="#{catGradoController.modifica.grEstado}">
-                        <f:selectItem itemValue ="A" itemLabel="Activo"/>
-                        <f:selectItem itemValue="P" itemLabel="Trabajando"/>
+                <p:panelGrid columns="2" class="Container100 Responsive" id="p1">
+                    <p:outputLabel for="anio" value="Año Escolar: " class="  Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="anio" class=" Responsive" value="#{catSeccionController.idanio}" required="true" requiredMessage="Debe seleccionar Año Escolar">
+                        <f:selectItems itemValue ="#{an.idAnioEscolar}" itemLabel="#{an.aeAnio}" value="#{catSeccionController.listAnios}" var="an" />
                     </p:selectOneMenu>
+                    <p:outputLabel for="grado" value="Grado: " class="  Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="grado" class=" Responsive" value="#{catSeccionController.idgrado}" required="true" requiredMessage="Debe seleccionar grado">
+                        <f:selectItems itemValue ="#{gr.idGrado}" itemLabel="#{gr.grNombre}" value="#{catSeccionController.listGrados}" var="gr" />
+                    </p:selectOneMenu>
+                    <p:outputLabel for="seccion"  value="Seccion: " class=" Responsive"></p:outputLabel>
+                    <p:inputText tabindex="1" id="seccion" value="#{catSeccionController.modifica.scDescripcion}" onblur="value=value.toUpperCase()" required="true" requiredMessage="Debe ingresar seccion" maxlength="1"></p:inputText>
                 </p:panelGrid>
-                <p:tooltip for="nombre">
-                    <h:outputText value="Nombre del tipo de elemento de plantilla, ejemplo: Marco teórico"/>
-                </p:tooltip>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
-                    <p:commandButton value="Guardar" action="#{catGradoController.guardarModifica()}" update="p1,focus" oncomplete="configurarEnterTab()"/>
+                    <p:commandButton value="Guardar" action="#{catSeccionController.guardarModifica()}" update="p1,focus" oncomplete="configurarEnterTab()"/>
                     <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1,focus" resetValues="true" listener="#{catGradoController.resetNuevoForm()}" oncomplete="configurarEnterTab()" />
+                        <p:ajax update="p1,focus" resetValues="true" listener="#{catSeccionController.resetNuevoForm()}" oncomplete="configurarEnterTab()" />
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" listener="#{catGradoController.setIndexMenu(0)}"/>
+                        <p:ajax update="p1" resetValues="true" listener="#{catSeccionController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
-                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
-                        <p:menuitem value="Gestionar Componentes interactivos" url="#{siteUrls.componenteInteractiva}" >    
-                        </p:menuitem>
-                        <p:menuitem value="Clase interactiva" url="#{siteUrls.claseInteractiva}">    
-                        </p:menuitem>
-                        <p:menuitem value="Video-Clase Almacenada" url="#{siteUrls.claseVideoAlmacenada}">
-                        </p:menuitem>
-                    </p:tieredMenu> 
+                    
                 </div>
             </h:form>
         </p:panel>
