--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/seccion/index.xhtml
@@ -30,10 +30,13 @@
                     <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
                 </p:dialog>
                 
-                
+                <p:outputLabel for="anio" value="Año Escolar: " class="  Responsive"></p:outputLabel>
+                <p:selectOneMenu id="anio" class=" Responsive" value="#{catSeccionController.idanio}" >
+                    <f:selectItems itemValue ="#{an.idAnioEscolar}" itemLabel="#{an.aeAnio}" value="#{catSeccionController.listAnios}" var="an" />
+                </p:selectOneMenu>
                 
                 <p:dataTable id="consulta" paginatorPosition="bottom" rows="10" var="sec" value="#{catSeccionController.list}" 
-                             paginator="true"
+                             paginator="true" emptyMessage="NO HAY SECCIONES QUE MOSTRAR"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">
