--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionPlantillas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionPlantillas/index.xhtml
@@ -29,6 +29,7 @@
                 </p:dialog>
                 <p:dataTable id="consulta" var="car" value="#{gestionPlantillasController.plantillaList}" rows="10"
                              paginator="true"
+                             paginatorPosition="bottom"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true"
